--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -334,7 +334,7 @@ Figure \ref{hierarchy} shows the design multi-hierarchy used in the DSpace reaso
 \label{dspace design}
 \end{figure}
 
-
+ddd
 \subsection{Factbase}
 Prolog facts make up a factbase that stores a table of architectural entities with their architectural types (e.g., wall, door, window, desk, etc.). Each architectural entity in the design has a single entry in the factbase. The factbase is instantiated automatically during the import process from a CAAD based representation. This factbase will be used throughout the DSpace reasoner to  verify an entity exists in the design and links it to its architectural type. The following Prolog code shows two instantiated facts (predicates) for a doorway, and a window. 
 
